# predictor

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
Clinic/: README.md  pyproject.toml
Clinic/Clinic/: main.py
predictor/: pyproject.toml
predictor/Clinic/: main.py
predictor/predictor/: responses.json
