[tool.poetry]
name = "predictor"
version = "0.1.0"
description = ""
authors = ["Adambs <adam.ben77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "predictor.main:main"